@@ -525,4 +525,5 @@ DISTFILES =     cpp/hidapi/pc/hidapi-libusb.pc.in \
     cpp/src/command_classes/Protection.h \
     cpp/build/support.mk \
     config/qubino/ZMNHIA2.xml \
+    config/wenzhou/tz67.xml \
     cpp/src/vers.cpp
